--- a/assets/Scss/style.scss
+++ b/assets/Scss/style.scss
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     outline: none;
-}
+
 $Text_Dark: #391400;
 $Text_Dark_Accent:#EF6D58;
 $Text_Dark_Gray: rgba(57, 20, 0, 0.64);
@@ -1105,7 +1105,7 @@ svg{
     background: #F9E5DA;
     padding: 92px 135px;
 
-    @media (max-width:840px) {
+    @media (max-width:1382px) {
         padding: 92px 51px;
 }
 .section-tablet{
@@ -1901,6 +1901,344 @@ input{
         }
     }
 }
+}
+}
+.section-nine{
+    background: #28293E;
+    padding: 176px 135px;
+    
+    @media (max-width:840px) {
+        padding: 80px 66px;
+    }
+.container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 130px;
+
+@media (max-width:1280px) {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 60px;
+}
+.left-side-container{
+    border-radius: 6px;
+    background: #FFF;
+    width: 52%;
+    padding:57px 24px;
+    @media (max-width:1080px) {
+        width: 329px;
+    }
+.input-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 28px;
+
+h4{
+    width: 84%;
+    color: $Text_Dark;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.33em;
+    @media (max-width:1080px) {
+        width: 273px;
+    }
+}
+input{
+    padding: 9px 16px ;
+    color:$Text_Dark_Gray;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+}
+#email{
+    width: 84%;
+    height: 48px;
+    @media (max-width:1080px) {
+        width: 273px;
+    }
+}
+#message{
+    width: 84%;
+    height: 128px;
+    padding-bottom: 87px;
+    @media (max-width:1080px) {
+        width: 273px;
+        height: 96px;
+        padding-top: 20px;
+    }
+}
+.triangle-zone{
+    width: 84%;
+    position: relative;
+     @media (max-width:1080px) {
+        width: 273px;
+    }
+#subject{
+    width: 100%;
+}
+svg{
+    position: absolute;
+    left: 95%;
+    top: 50%;
+    @media (max-width:1200px) {
+        position: absolute;
+        left: 94%;
+        top: 50%;
+    }
+    @media (max-width:1080px) {
+        position: absolute;
+        left: 93%;
+        top: 50%;
+    }
+}
+}
+}
+.butt-container{
+    padding-top: 32px;
+    padding-right: 35px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+
+    @media (max-width:1280px) {
+        padding: 32px 30px;
+    }
+    @media (max-width:1180px) {
+        padding: 32px 25px;
+    }
+    @media (max-width:1080px) {
+        padding: 32px 0;
+    }
+    @media (max-width:980px) {
+        padding: 32px 5px;
+    }
+button{
+    border: none;
+    padding: 18px 30px;
+    border-radius: 6px;
+    background: #EF6D58;
+    a{
+        color: #FFF;
+        text-align: center;
+        font-size: 14px;
+        font-weight: 900;
+        text-transform: uppercase;
+    }
+}
+}
+}
+.right-side-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 48%;
+.text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+h5{
+    color: $Text_Light_Accent;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+h2{
+    color: $Text_Light;
+    font-size: 56px;
+    font-weight: 800;
+    line-height: 1.142em;
+    letter-spacing: -1px;
+    @media (max-width:1080px) {
+        font-size: 40px;
+        line-height: 1.2em;
+    }
+    @media (max-width:840px) {
+        width: 245px;
+    }
+}
+span{
+    width: 100%;
+    color:$Text_Light_Gray;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+    @media (max-width:1200px) {
+        width:329px ;
+    }
+}
+}
+.right-foot-container{
+    padding-top: 16px;
+.icon-container{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    padding: 16px; 
+    @media (max-width:1280px) {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 16px 0;
+    }
+
+.img-container{
+    width: 48px;
+    height: 48px;
+    overflow: hidden;
+    position: relative;
+   
+img{
+    width: 100%;  
+}
+svg{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+}
+span{
+    color: $Text_Light;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.6em;
+
+    @media (max-width:1280px) {
+        width:265px;
+    }
+}
+}
+}
+}
+}
+}
+.section-ten{
+    padding: 139px 135px;
+    background-color:#FDF0E9;
+    @media (max-width:840px) {
+        padding: 96px 64px 124px;
+    }
+.zone{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 130px;
+    @media (max-width:1240px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    @media (max-width:1040px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+.left-zone{
+    width: 53%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-start;
+    gap: 28px;
+    
+h5{
+    color: $Text_Dark_Accent;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+h2{
+    color: $Text_Dark;
+    font-size: 56px;
+    font-weight: 800;
+    line-height: 1.142em;
+    letter-spacing: -1px;
+    @media (min-width:1900px) {
+        width: 740px;
+    }
+    @media (max-width:1040px) {
+        font-size: 40px;
+        line-height: 1.2em;
+        width: 273px;
+    }
+}
+span{
+    color: $Text_Dark_Gray;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+    @media (min-width:1600px) {
+        width: 470px;
+    }
+    @media (max-width:1040px) {
+        width: 329px;
+    }
+}
+button{
+    cursor: pointer;
+    padding: 18px 30px;
+    border: none;
+    border-radius: 6px;
+    background: #EF6D58;    
+a{
+    color: #FFF;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+}
+}
+.right-zone{
+    width: 47%;
+    @media (max-width:1240px) {
+        display: flex;
+        order: -1;
+    }
+img{
+    @media (max-width:840px) {
+        width: 329px;
+    }
+}
+}
+}
+}
+.img-box{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    @media (min-width:1440px) {
+        background-color:#FDF0E9;
+        display: flex;
+        justify-content: center;
+    }
+    img{
+        width: 225px;
+        @media (min-width:1440px) {
+            width: 400px;
+        }
+        @media (max-width:640px){
+            width: 241.5px;
+        }
+    }
+}
+.section-eleven{
+    
 }
 }
 }
