--- a/assets/Scss/style.scss
+++ b/assets/Scss/style.scss
@@ -16,6 +16,7 @@ body{
 a{
     text-decoration: none;
 }
+
 header{
     width: 100%;
     height: 100%;
@@ -1954,6 +1955,7 @@ input{
     font-size: 16px;
     font-weight: 400;
     line-height: 2em;
+    text-transform: capitalize;
 }
 #email{
     width: 84%;
@@ -2233,12 +2235,182 @@ img{
             width: 400px;
         }
         @media (max-width:640px){
-            width: 241.5px;
+            width: 250.5px;
         }
     }
 }
 .section-eleven{
+    background: #28293E; 
+    padding: 89px 135px 52px;
+    @media (max-width:840px) {
+        padding: 105px 23px;
+    }
+.form-top-side{
+    padding-bottom: 112px;
+    border-bottom: 1px solid #3A3C56;
+    @media (max-width:840px) {
+        padding-bottom: 64px;
+    }
+.text-zone{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+
+    @media (max-width:840px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+    }
     
+h4{
+    color: $Text_Light;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.33em
+}
+.menu-bar{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 17px;
+    @media (max-width:840px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 17px;
+    }
+h5{
+    color: $Text_Light_Accent;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+    letter-spacing: 3px;
+    text-transform: uppercase;  
+}
+#menu-list-items{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    @media (max-width:840px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+li{
+   a{ color: $Text_Light;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+}
+}
+}
+}
+.service-bar{
+    overflow: hidden;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+
+    @media (max-width:840px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 17px;
+    }
+
+h5{
+    color: $Text_Light_Accent;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+    letter-spacing: 3px;
+    text-transform: uppercase; 
+}
+#service-list-items{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+    @media (max-width:840px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+li{
+    a{
+        color: $Text_Light;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 2em;
+    }
+}
+}
+}
+}
+}
+.form-foot-side{
+    width: 100%;
+    padding-top:43px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @media (max-width:840px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 32px;
+    }
+.form-foot-text{
+    width: 50%;
+    @media (max-width:840px) {
+        width: 198px;
+    }
+span{
+    color: $Text_Light_Gray;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2em;
+}
+}
+.foot-list-items{
+    width: 50%;
+    @media (max-width:840px) {
+        width: 275px;
+    }
+    #list-items2{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 68px;
+        list-style-type: none;
+    li{
+       a{ color: $Text_Light;
+        text-align: right;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 2em;
+    }
+}
+}
+}
+}
 }
 }
 }
